make JWT lifetime and CORS origins configurable, require jwt.key at startup
- jwt.expiration (env JWT_EXPIRATION, default 30d) replaces the hardcoded
  30-day token lifetime in JWTService.
- app.cors.allowed-origins (env APP_CORS_ALLOWED_ORIGINS, default *) feeds
  CorsConfig as origin patterns, so a deployment can pin the frontend
  origin(s) without a code change.
- jwt.key is @NotBlank: a deployment without JWT_KEY now fails at startup
  with "Property: jwt.key ... must not be blank" instead of 500-ing on the
  first login. The test profile gets its own key.
- @ConfigurationPropertiesScan replaces the per-class
  @EnableConfigurationProperties.

Tests: JWTServiceTest (lifetime from configuration, expired token
rejected) and CorsConfigTest (configured origin and wildcard pattern pass
preflight, other origins get 403).

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>